查看观看记录信息

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--<html manifest="klinegame.appcache">-->
 <html>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" /> 
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
+<meta name="gameCanvas" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
 <head>
     <title>趋势突击</title> 
     <script type="text/javascript" src="src/cocos2d-js-v3.8.js" charset="UTF-8"></script>
