--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <script type="text/javascript" src="src/checkButton.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/matchEndInfoLayer.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/zhanjiView.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/rankView.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/dataManager.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/server.js" charset="UTF-8"></script>
     <!--<script type="text/javascript" src="src/multiColTableViewTest.js" charset="UTF-8"></script>-->
     
     <script type="text/javascript" src="src/tempLoadScene.js" charset="UTF-8"></script>
