--- a/share.html
+++ b/share.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="src/checkButton.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/matchEndInfoLayer.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/dataManager.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/server.js" charset="UTF-8"></script>
 
     <script type="text/javascript" src="src/shareLoadScene.js" charset="UTF-8"></script>
 </head>
