--- a/shareGame.html
+++ b/shareGame.html
@@ -3,33 +3,22 @@
 <html>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" /> 
 <head>
-    <title>K线争霸操作分享</title> 
-    <script type="text/javascript" src="src/cocos2d-js-v3.8.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/sceneBase.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/klineScene.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/util.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/packet.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/matchInfoLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/splashScene.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/checkBox.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/progressLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/playerInfoLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/baseGraphLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/volumnTechLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/klineLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/myWorker.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/tais.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/taisMa.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/taisEma.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/taisMacd.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/matchEndInfoLayer.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/shareMain.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="src/testClass.js" charset="UTF-8"></script>
+
+    <script>
+        function SaveAs5(imgURL)
+        {
+            var oPop = window.open(imgURL,"","width=1, height=1, top=5000, left=5000");
+            for(; oPop.document.readyState != "complete"; )
+            {
+                if (oPop.document.readyState == "complete")break;
+            }
+            oPop.document.execCommand("SaveAs");
+            oPop.close();
+        }
+    </script>
+    <img src="avatar1.png" id="DemoImg" border="0">
+    <a href="#" onclick="SaveAs5(document.getElementById('DemoImg').src)"> 点击这里下载图片 </a>
+
 </head>
 
-<body bgcolor="#0F6094" id="mainBody">   
-<!--#0F6094    #152936-->
-    <canvas id="gameCanvas" width="1136" height="640" style="visibility:visible;background:gray"></canvas>
-    <script type="text/javascript" src="src/shareMain.js" charset="UTF-8"></script>
-</body>
 </html>
