--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="src/matchEndInfoLayer.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/zhanjiView.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/rankView.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/controlView.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/dataManager.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/server.js" charset="UTF-8"></script>
     <!--<script type="text/javascript" src="src/multiColTableViewTest.js" charset="UTF-8"></script>-->
