设置比赛策略1

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="src/controlView.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/dataManager.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/server.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/matchView.js" charset="UTF-8"></script>
     <!--<script type="text/javascript" src="src/multiColTableViewTest.js" charset="UTF-8"></script>-->
     
     <script type="text/javascript" src="src/tempLoadScene.js" charset="UTF-8"></script>
